updated hello and info gathering also some installation tips

--- a/documentation/installing.tex
+++ b/documentation/installing.tex
@@ -25,7 +25,7 @@
 \maketitle
 \tableofcontents
 \section{Introduction}
-This is a guide for how to install it on Ubuntu Linux.
+This is a guide for how to install Machine Programmer on Ubuntu Linux.
 Ubuntu Linux is perhaps the most popular Linux Distribution,
 also it is free to download and install (though donations are welcome).
 So if you have the misfortune of having a Micrsoft or Apple computer, 
@@ -136,11 +136,50 @@ After that can go back into the project folder
 ./autogen.sh && ./configure LDFLAGS=-L./library && make && binary/programmer
 \end{lstlisting}
 
+\subsubsection{Intel GPUs}
+Intel includes onboard GPUs on a lot of motherboards, 
+so chances are good that if you have an Intel CPU, that you may also have an
+intel GPU, which you can take advantage of using the well functioning open
+source beignet drivers.
+
+\begin{lstlisting}[language=bash]
+apt-get install beignet beignet-dev beignet-opencl-icd
+\end{lstlisting}
+
+
 \subsubsection{Nvidia GPUs}
 Unfortunately there are no libre drivers for Nvidia that have OpenCL support,
 however there are proprietary drivers, which may work in certain cases. 
+Note this means you can't use UEFI, common on modern laptops, you'll have to
+disable it in the bios.  Also this could make breaking changes so I advise you
+backup your data before attempting to install proprietary drivers. 
 
-If you have 
+There are a variety of versions of the nvidia drivers, this is because they are
+very finicky and they might not all work with your GPU card.  For instance I had
+to try several, and spend several days testing, before I finally figured out
+which ones worked. 
+
+The best one for my GeForce GTX 960M, is nvidia-361. I tried their recommended
+nvidia-367 and nvidia-370 those didn't work, and nvidia-340 didn't even show any
+picture on the screen (good thing I had ssh). 
+
+So I would advise you backup your system, and install ssh, so you could ssh
+tunnel into your computer and fix it in case the monitor stops working due to
+incompatible drivers. 
+
+If you have a GeForce GTX 960M, then can do
+\begin{lstlisting}[language=bash]
+apt-get install nvidia-361 
+\end{lstlisting}
+
+You may find it doesn't work well with the standard dev packs, something I was
+struggling with for days.  But fortunately can install the open source ones 
+for Intel.
+
+\begin{lstlisting}[language=bash]
+apt-get install beignet-opencl-icd
+\end{lstlisting}
+
 
 \subsubsection{Other GPU's}
 You would have to see what is available for your platform,
@@ -155,6 +194,6 @@ apt-get install clang-format git
 \end{lstlisting}
 
 \section{Contact}
-Can email me at \href{mailto:streondj@gmail.com}{\nolinkurl{streondj@gmail.com}}
+Can email me at \href{mailto:streondj@gmail.com}{streondj@gmail.com}
 for details.
 \end{document}
