--- a/documentation/machine_programmer.sty
+++ b/documentation/machine_programmer.sty
@@ -2,11 +2,18 @@
 \RequirePackage[utf8]{inputenc}
 \RequirePackage[english]{babel}
 \RequirePackage{csquotes}
+\makeatletter
+\def\blx@shorthands{}
+\makeatother
 \RequirePackage[backend=biber, hyperref]{biblatex}
-\RequirePackage{minitoc}
-\RequirePackage[margin=2cm]{geometry}
+%\RequirePackage{minitoc}
+%\RequirePackage[margin=4cm]{geometry}
+\RequirePackage{bytefield}
 \RequirePackage{listings}
 \RequirePackage{hyperref}
+\RequirePackage{multirow}
+\RequirePackage{longtable}
+\RequirePackage{booktabs}
 \RequirePackage[dvipsnames]{xcolor}
 \RequirePackage[
   type={CC},
